# PayServiceFastAPI

./: .env.sample  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_08_24_0040-8a78e64c082c_create_table_products.py  2024_08_24_1303-fc296a49c2ee_create_user_model.py  2024_08_24_1319-1b1c8bdc29e1_create_posts_table.py  2024_08_24_1439-be211d094fe0_create_profile_table.py  2024_08_25_2350-300c2e19bca1_fix_user_model.py  2024_08_26_1306-372e7c68f4d8_fix_profile_model.py  2024_08_30_0206-238f55ae420e_add_ordermodel.py  2024_08_30_0209-7c46249ba3f4_fix_order.py  2024_08_31_0016-af3e5bc83c70_add_m2m_for_order_and_products.py  2024_09_04_0253-d8575bdad49f_refactor_m2m_order_product_table.py  2024_09_04_0259-50e8ffabe23d_add_count_to_m2m.py  2024_09_26_1828-830b6d2e8009_change_user_model.py  2024_09_26_1843-d07e0c76c64a_change_user_model.py  2024_09_26_1850-2d12ee7ebbe5_change_user.py  2024_09_26_1857-bf2649035bb8_change_user.py  2024_09_26_1903-f082c594d81b_change_user.py  2024_10_05_1552-d65e65ba3ab2_add_models.py  2024_10_06_1940-de5ca8cb9e47_add_models.py  2024_10_07_1733-f0437ffefee5_fix_order.py  2024_10_07_2032-25938cbce120_fix_orders.py  2024_10_19_1725-d5e180680631_add_coupons.py  2024_10_19_1729-48503797ebb5_add_secret_key_in_backet.py  2024_10_20_2039-d1e308bfa4ed_add_coupon_id_in_order.py  2024_10_30_1701-6c429aab2c44_add_session_field_in_basket.py  2024_10_30_2212-fb5a0ab49610_add_relationship_between_basket_and_.py  2024_10_30_2220-deefcea7ae0e_fix_unique_code_basket.py  2024_12_20_1813-4a1083cfa3dc_update_user_model.py
alertmanager/: config.yml
api_stripe/: abs.py  api.py  exeptions.py  handler.py  types.py
api_stripe/api/: __init__.py  coupon.py  list_product.py  product.py  session.py
api_v1/: __init__.py  routers.py
api_v1/auth/: README.md  __init__.py  auth_validators.py  backends.py  hasher.py  (+7 more)
app_includes/: __init__.py  logs_errors.py  middlewares.py  prometheus.py
bot/: bot_config.py  main.py
certs/: README.md
config/: __init__.py  config.py
products/: views.py
prometheus/: prometheus.yml
tests/: test_products.py  test_utils_products.py
users/: bodyies.py  schemas.py  views.py
(+86 files in other folders)
